Added examples to README.md

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -19,7 +19,7 @@
     state: directory
     mode: 'g+w'
     owner: '{{ sentry.user }}'
-    group: '{{ sentry.group }}'
+    group: '{{ sentry.group | default(omit)}}'
   tags: permissions
 
 
